        'disregard_symmetry_independent_sites' to 'use_special_position_disorder'.
    - COD::AtomProperties:
      - the van der Waals radius of the hydrogen atom from 1.09 to 1.2.
  * Fixed:
    - test outputs for codcif2sdf and molcif2sdf;
    - corrected a typo 'succesfully' -> 'successfully';
    - codcif:
      - adjusted signed and unsigned integer types in cif_grammar.y,
        cif2_grammar.y and datablock.c.

cod-tools (2.5)

  * Added:
    - cif_molecule:
      - command line option to turn off special treatment of disorder groups
        with negative indices;
      - warning about the unity symmetry operation not being the first one
        on the symmetry operation list.
    - cif_validate:
      - checking if data items from the same category reside in the same loop;
      - reporting of missing parent data items;
      - the --allow-double-precision-notation and
        --no-allow-double-precision-notation options;
      - the --no-report-deprecated option as an alias of the
        --ignore-deprecated option.
      - the --max-message-count option.
    - COD::AuthorNames:
      - author_names_are_the_same() subroutine.
    - COD::CIF::DDL::DDL1:
      - the get_list_constraint_type() and get_dic_item_value() subroutines.
    - COD::CIF::Data::AtomList:
      - a warning about data items used in the construction of the atom
        structure not residing in the same loop;
    - COD::CIF::Tags::Manage:
      - the get_item_loop_index() subroutine;
    - COD::Spacegroups::Symop::Algebra:
      - the snap_to_crystallographic() subroutine;
      - the symops_are_equal() subroutine.
    - COD::Spacegroups::Builder:
      - the debug() method;
      - the check_inversion_translation() method;
      - the sub has_translation() method.
    - the COD::Spacegroups::SimpleBuilder module;
    - symop_build_spacegroup:
      - the '--use-optimised-spacegroup-builder' and
        '--use-simple-spacegroup-builder' options;