@@ -642,6 +642,7 @@ CIF *new_cif_from_cif2_file( FILE *in, char *filename, cif_option_t co, cexcepti
         cif_set_nerrors( cif, nerrors );
     }
 
+    cif2_lexer_cleanup();
     cif_compiler_detach_cif( cif_cc );
     delete_cif_compiler( cif_cc );
     cif_cc = NULL;
