@@ -27,7 +27,8 @@ cod-tools (unreleased)
     - corrected a typo 'succesfully' -> 'successfully';
     - codcif:
       - adjusted signed and unsigned integer types in cif_grammar.y,
-        cif2_grammar.y and datablock.c.
+        cif2_grammar.y and datablock.c;
+      - fixed a memory leak due to non-free()d buffers.
 
 cod-tools (2.5)
 
